# OS_Labs

./: README.md  control-questions.md
lab1/: CMakeLists.txt  creator.cpp  employee.h  employee_test.cpp  main.cpp  reporter.cpp
lab2/thread_array_processor/: .gitignore  CMakeLists.txt  README.md
lab2/thread_array_processor/src/stdthread/: main.cpp  thread_processor.cpp  thread_processor.h
lab2/thread_array_processor/src/winapi/: main.cpp  thread_processor.cpp  thread_processor.h
lab2/thread_array_processor/tests/: CMakeLists.txt
lab2/thread_array_processor/tests/stdthread/: stdthread_tests.cpp
lab2/thread_array_processor/tests/winapi/: winapi_tests.cpp
lab3/: CMakeLists.txt
lab3/c20/: func.h  main.cpp
lab3/main_lab/: func.h  main.cpp
lab3/main_test/: tests.cpp
lab3/test20/: tests.cpp
lab4/: CMakeLists.txt
lab4/Receiver/: Receiver.cpp
lab4/Receiver14/: Receiver.cpp
lab4/Sender/: Sender.cpp
lab4/Sender14/: Sender.cpp
lab4/Tests/: tests.cpp
lab5/c17/client/: client.cpp
lab5/c17/server/: server.cpp
lab5/c17/tests/: CMakeLists.txt  test_client.cpp  test_server.cpp
lab5/c98/: CMakeLists.txt
lab5/c98/client/: CMakeLists.txt  client.cpp
lab5/c98/common/: employee.h
lab5/c98/server/: CMakeLists.txt  server.cpp
lab5/c98/tests/: test_client.cpp  test_server.cpp
